Fix spacing after page descriptions

--- a/packages/knittingarch/assets/css/screen.css
+++ b/packages/knittingarch/assets/css/screen.css
@@ -1,7 +1,8 @@
 @import "shared/assets/css/screen.css";
 
 :root {
-    --font-sans: Raleway, -apple-system, BlinkMacSystemFont, Segoe UI, Helvetica, Arial, sans-serif; /* stylelint-disable-line value-keyword-case */
+    --font-sans: Raleway, -apple-system, BlinkMacSystemFont, Segoe UI, Helvetica,
+        Arial, sans-serif; /* stylelint-disable-line value-keyword-case */
     --font-serif: "PT Serif", Times, serif; /* stylelint-disable-line value-keyword-case */
     --font-mono: "Courier New", monospace;
     --h1-size: 4.8rem;
@@ -87,15 +88,15 @@ body {
 }
 
 .gh-page-feed {
-    margin-top: 6rem;
+    margin-top: 3rem;
 }
 
 .gh-feed .gh-card {
-    margin-top: 6rem;
+    margin-top: 3rem;
 }
 
 .gh-content h2 {
-  color: var(--ghost-accent-color);
+    color: var(--ghost-accent-color);
 }
 
 .gh-card-link {
